2010-01-28  Joe Mason  <jmason@rim.com>

        Reviewed by Adam Barth.

        Limit login retries to 5
        https://bugs.webkit.org/show_bug.cgi?id=34193

        * Scripts/webkitpy/bugzilla.py:

2010-01-27  Martin Robinson  <mrobinson@webkit.org>

        Adding myself to the committer list. No review necessary.

        * Scripts/webkitpy/committers.py:

2010-01-27  George Wright  <gwright@rim.com>

        Reviewed by Adam Treat.

        https://bugs.webkit.org/show_bug.cgi?id=34216

        Add missing include for wtf/Platform.h

        * DumpRenderTree/AccessibilityController.h:

2010-01-27  Diego Gonzalez  <diego.gonzalez@openbossa.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] DRT Provide worker thread ability to track counters
        https://bugs.webkit.org/show_bug.cgi?id=34221

        Implement workerThreadCount() in LayoutTestController of Qt DRT

        Tests:
        fast/workers/dedicated-worker-lifecycle.html
        fast/workers/shared-worker-frame-lifecycle.html
        fast/workers/shared-worker-lifecycle.html
        fast/workers/worker-lifecycle.html

        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::workerThreadCount):
        * DumpRenderTree/qt/LayoutTestControllerQt.h:

2010-01-27  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Rubberstamped by Simon Hausmann.

        [Qt] QtLauncher refactoring:

        Make the LauncherWindow depend less on the view, so that more
        code can be shared in near future.

        * QtLauncher/main.cpp:
        (LauncherWindow::sendTouchEvent):
        (LauncherWindow::loadFinished):
        (LauncherWindow::zoomIn):
        (LauncherWindow::zoomOut):
        (LauncherWindow::resetZoom):
        (LauncherWindow::toggleZoomTextOnly):
        (LauncherWindow::dumpHtml):
        (LauncherWindow::selectElements):
        (LauncherWindow::setupUI):

2010-01-27  Kinuko Yasuda  <kinuko@chromium.org>
