@@ -1,3 +1,13 @@
+2010-01-28  Anton Muhin  <antonm@chromium.org>
+
+        Reviewed by Shinichiro Hamaji.
+
+        Improve treatment of conditions and rest of the line for if, else, switch and alikes
+        https://bugs.webkit.org/show_bug.cgi?id=34173
+
+        * Scripts/webkitpy/style/cpp_style.py:
+        * Scripts/webkitpy/style/cpp_style_unittest.py:
+
 2010-01-28  Joe Mason  <jmason@rim.com>
 
         Reviewed by Adam Barth.
